--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.mercateo</groupId>
     <artifactId>rest-schemagen-spring</artifactId>
-    <version>0.18.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>rest-schemagen-spring</name>
@@ -34,8 +34,8 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:https://github.com/Mercateo/rest-schemagen-spring.git</connection>
-        <developerConnection>scm:git:https://github.com/Mercateo/rest-schemagen-spring.git</developerConnection>
+        <connection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</connection>
+        <developerConnection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</developerConnection>
         <url>https://github.com/Mercateo/rest-schemagen-spring.git</url>
     </scm>
 
