--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,12 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
