--- a/pom.xml
+++ b/pom.xml
@@ -8,66 +8,66 @@
 		<artifactId>oss-parent-pom</artifactId>
 		<version>0.9.0</version>
 	</parent>
-	
+
 	<groupId>com.mercateo.rest</groupId>
 	<artifactId>rest-schemagen-spring</artifactId>
-	<version>0.1.26-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>rest-schemagen-spring</name>
-	<description>Spring configuration for rest-schemagen</description>
+    <name>rest-schemagen-spring</name>
+    <description>Spring configuration for rest-schemagen</description>
 
-	<url>https://github.com/Mercateo/rest-schemagen-spring</url>
-	<inceptionYear>2017</inceptionYear>
-	<organization>
-		<name>Mercateo AG</name>
-		<url>http://www.mercateo.com</url>
-	</organization>
-	<issueManagement>
-		<system>github</system>
-		<url>https://github.com/Mercateo/rest-schemagen-spring/issues</url>
-	</issueManagement>
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-	</distributionManagement>
-	<developers>
-		<developer>
-			<id>andreas_wuerl</id>
-			<name>Andreas Würl</name>
-			<email>andreas.wuerl@mercateo.com</email>
-			<url>http://www.mercateo.com</url>
-			<organization>Mercateo AG</organization>
-			<organizationUrl>http://www.mercateo.com</organizationUrl>
-			<roles>
-				<role>developer</role>
-			</roles>
-		</developer>
-	</developers>
-	<licenses>
-		<license>
-			<name>ASL2</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-		</license>
-	</licenses>
-	<scm>
-		<connection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</connection>
-		<developerConnection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</developerConnection>
-		<url>https://github.com/Mercateo/rest-schemagen-spring.git</url>
-		<tag>HEAD</tag>
-	</scm>
+    <url>https://github.com/Mercateo/rest-schemagen-spring</url>
+    <inceptionYear>2017</inceptionYear>
+    <organization>
+        <name>Mercateo AG</name>
+        <url>http://www.mercateo.com</url>
+    </organization>
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/Mercateo/rest-schemagen-spring/issues</url>
+    </issueManagement>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+    <developers>
+        <developer>
+            <id>andreas_wuerl</id>
+            <name>Andreas Würl</name>
+            <email>andreas.wuerl@mercateo.com</email>
+            <url>http://www.mercateo.com</url>
+            <organization>Mercateo AG</organization>
+            <organizationUrl>http://www.mercateo.com</organizationUrl>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>ASL2</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    <scm>
+        <connection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</connection>
+        <developerConnection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</developerConnection>
+        <url>https://github.com/Mercateo/rest-schemagen-spring.git</url>
+        <tag>HEAD</tag>
+    </scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring.version>4.3.14.RELEASE</spring.version>
+		<spring.version>5.0.7.RELEASE</spring.version>
 	</properties>
 
 	<build>
@@ -119,7 +119,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.0.1</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -132,7 +132,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.0</version>
+				<version>0.8.1</version>
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
@@ -154,11 +154,11 @@
 		<dependency>
 			<groupId>com.mercateo</groupId>
 			<artifactId>common.rest.schemagen</artifactId>
-			<version>0.18.14</version>
+			<version>0.18.15</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
+			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
@@ -181,13 +181,13 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.13.0</version>
+			<version>2.18.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.9.0</version>
+			<version>3.10.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -204,33 +204,33 @@
 		</dependency>
 	</dependencies>
 
-	<profiles>
-		<profile>
-			<id>release-sign-artifacts</id>
-			<activation>
-				<property>
-					<name>gpg.passphrase</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+    <profiles>
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>gpg.passphrase</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
