--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.mercateo.rest</groupId>
     <artifactId>rest-schemagen-spring</artifactId>
-    <version>0.2.1</version>
+    <version>0.2.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>rest-schemagen-spring</name>
@@ -58,7 +58,7 @@
         <connection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</connection>
         <developerConnection>scm:git:git@github.com:Mercateo/rest-schemagen-spring.git</developerConnection>
         <url>https://github.com/Mercateo/rest-schemagen-spring.git</url>
-        <tag>rest-schemagen-spring-0.2.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
